Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignBooleanBoolObjField.quorum
class Main
    Boolean v
    action Main
        v:SetValue(true)
        Test(v)
    end

    action Test(boolean var)
        if var = true
            output "passed"
        end
    end
end
